# django-todo

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose-prod_template.yml  docker-compose.yml  env  manage.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: nox-audit_multi-arch.yml  nox-coverage.yml  nox-lint_multi-arch.yml  nox-safety_multi-arch.yml
accounts/: tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_age_customuser_bio_customuser_country_and_more.py
accounts/tests/: factories.py  test_core.py  test_models.py  test_views.py
config/: settings.py  urls.py  wsgi.py
djangdo/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
djangdo/migrations/: 0001_initial.py  0002_alter_todolist_options.py  0002_alter_todolist_owner.py  0003_alter_todolist_id.py
djangdo_app/: admin.py  apps.py  urls.py  views.py
djangdo_app/migrations/: 0001_initial.py
djangdo_app/templates/: base.html
djangdo_app/templates/djangdo_app/: index.html  todo_list.html  todoitem_confirm_delete.html  todoitem_form.html  todolist_confirm_delete.html
djangdo_project/: asgi.py  settings.py  urls.py  wsgi.py
docs/: conf.py  contributing.rst  create_new_tasks.rst  features.rst  index.rst  installing.rst  package_index.rst  testing.rst
htmlcov/: class_index.html  coverage.json  d_132492a2ad6b061c_0001_initial_py.html  d_132492a2ad6b061c_0002_alter_todolist_options_py.html  d_1ea838694151cac8_test_py.html  d_1ea838694151cac8_urls_py.html  d_1f011b9c553563e3_admin_py.html  d_1f011b9c553563e3_apps_py.html  d_1f011b9c553563e3_models_py.html  d_1f011b9c553563e3_urls_py.html  d_1f011b9c553563e3_views_py.html  d_21411594f0ec1795_0001_initial_py.html  d_21411594f0ec1795_0002_customuser_age_customuser_bio_customuser_country_and_more_py.html  d_5039316f7068a85f_factories_py.html  d_5039316f7068a85f_test_models_py.html  d_5039316f7068a85f_test_views_py.html  d_509fd8af0f7a1b49_admin_py.html  d_509fd8af0f7a1b49_apps_py.html  d_509fd8af0f7a1b49_forms_py.html  d_509fd8af0f7a1b49_models_py.html  d_509fd8af0f7a1b49_urls_py.html  d_509fd8af0f7a1b49_views_py.html  d_5caf520a5ad64cff_admin_py.html  d_5caf520a5ad64cff_apps_py.html  d_5caf520a5ad64cff_models_py.html  d_5caf520a5ad64cff_urls_py.html  d_5caf520a5ad64cff_views_py.html  d_9df13ddeb1e47e46_admin_py.html  d_9df13ddeb1e47e46_apps_py.html  d_9df13ddeb1e47e46_forms_py.html  d_9df13ddeb1e47e46_models_py.html  d_9df13ddeb1e47e46_urls_py.html  d_9df13ddeb1e47e46_views_py.html  d_b88c3b5a8ce6a61b_test_forms_py.html  d_b88c3b5a8ce6a61b_test_views_py.html  d_dfdacaa496597cde_factories_py.html  d_dfdacaa496597cde_test_forms_py.html  d_dfdacaa496597cde_test_models_py.html  d_dfdacaa496597cde_test_urls_py.html  d_dfdacaa496597cde_test_views_py.html  (+30 more)
pages/: tests.py
pages/tests/: test_views.py
static/css/: base.css
staticfiles/: staticfiles.json
staticfiles/css/: base.css
tasks/: admin.py  apps.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_todolist_options.py  0003_alter_todoitem_description.py
tasks/tests/: factories.py  test_models.py  test_views.py
templates/: base.html  home.html  index.html
templates/account/: email.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_from_key.html
templates/account/email/: email_confirmation_message.txt  email_confirmation_subject.txt
templates/admin/: base_site.html
templates/djangdo/: index.html  todo_list.html  todoitem_confirm_delete.html  todoitem_form.html  todolist_confirm_delete.html  todolist_form.html
templates/lists/: todo_list.html  todoitem_confirm_delete.html  todoitem_new.html  todolist_confirm_delete.html  todolist_new.html
templates/pages/: about.html  home.html
templates/registration/: login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_form.html  signup.html
