[tool.black]
line-length = 119
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | djangdo/migrations/0001_initial.py
  | djangdo/migrations/0002_alter_todolist_owner.py
  | djangdo/migrations/0003_alter_todolist_id.py
  | build
  | dist
  | ^.*\b(migrations)\b.*$
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["*.gitignore"]
extend_skip = ["*.md", "*.json"]
line_length = 119

[tool.poetry]
name = "djangdo"
version = "0.1.0"
description = "A simple todo application"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
environs = {extras = ["django"], version = "^9.5.0"}
django-bootstrap4 = "^22.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"
django-debug-toolbar = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
