[metadata]
name = django-todo
version = 0.1.0
url = https://github.com/kevinbowen777/django-todo.git
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
description = A todo app demonstrating basic Django functionality
long_description = file: README.md
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
project_urls =
    Source = https://github.com/kevinbowen777/django-todo/

[options]
python_requires = >=3.9
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Django >= 4.1

[flake8]
# https://flake8.pycqa.org/en/latest/user/configuration.html
select = B,B9,BLK,C,E,F,I,S,W
exclude =
    conftest.py
    # No need to traverse git directory
    .git,
    # Skip cache directories
    __pycache__,
    build,
    .env,
    tasks/migrations/0001_initial.py,
    tasks/migrations/0002_alter_todolist_owner.py,
    tasks/migrations/0003_alter_todolist_id.py,
    accounts/migrations/*,
    tasks/migrations/*,
    dist,
    images/
# https://www.flake8rules.com
ignore =
    # falsely triggers on list slicing
    E203
    # import at top, avoid circular imports
    E402
    # bare except
    E722
max-LIne-length = 79
per-file-ignores =
    accounts/tests/factories.py
    accounts/tests/test_models.py
    accounts/tests/*:S101,S106
    accounts/tests.py:S101,S106
    config/tests/*:S101
    tasks/tests/*:S101
    # __init__ exports names
    # app/crud/__init__.py: F401
    # app/schemas/__init__.py: F401
    # app/tests/conftest.py: E501
